# Notebin

./: .gitignore  README.md
Notebin-Backend/: Cargo.toml  schema.sql
Notebin-Backend/src/: config.rs  main.rs
Notebin-Backend/src/db/: mod.rs  pool.rs
Notebin-Backend/src/handlers/: mod.rs  note_handler.rs  user_handler.rs
Notebin-Backend/src/models/: mod.rs  note.rs  user.rs
Notebin-Backend/src/routes/: mod.rs  note_routes.rs  user_routes.rs
Notebin-Backend/src/services/: note_service.rs  user_service.rs
notebin-frontend/: package-lock.json  package.json
notebin-frontend/src/app/: layout.tsx  page.tsx
notebin-frontend/src/app/note/[id]/: page.tsx
notebin-frontend/src/app/register/: page.tsx
notebin-frontend/src/lib/: api.ts
