[package]
name = "Notebin-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.6", features = [
  "postgres",                  # Postgres support
  "runtime-tokio-native-tls",  # async runtime + TLS
  "macros"                     # #[query!] macros
]}

dotenv = "0.15"
envy   = "0.4"

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

anyhow             = "1.0"


